# behavior-lab

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
configs/: benchmark.yaml  config.yaml
docs/: INTEGRATION_PLAN.md  INTEGRATION_PLAN_heavy_models.md  INTEGRATION_PLAN_survey_methods.md  README.md  architecture.md  behavior_analysis_prd.md  behavior_analysis_principles.md  behavior_analysis_workbench.md  behavior_lab_technical_notes.md  datasets.md  e2e_verification.md  hbehavemae_rollout_scoping.md  kp_benchmark_v0.1.md  model_taxonomy.md  overview.md  phase4_report.md  subtle_pipeline_reference.md  triangulation_methodology.md
scripts/: 01_train_dlc_resnet50.sh  02_train_dlc_superanimal.sh  03_infer_dlc.sh  04_zeroshot_superanimal.sh  anipose_triangulate.py  benchmark.py  benchmark_compare.py  benchmark_kp_dlc.py  bmae_probe.py  bmae_probe_cv3.py  calms21_keypoint_ablation.py  calms21_prep.py  compare_clustering.py  discover.py  download_data.py  evaluate.py  generate_cluster_report.py  gradcam_calms21_stgcn.py  isolated_run.py  keypoint_noise_sweep.py  make_tailbase_noised_calms21.py  prepare_kp_splits.py  preprocess_data.py  render_kp_data_report.py  render_kp_overlay.py  render_kp_results_report.py  render_prediction_videos.py  render_predictions_overlay.py  rerun_fixed_rebaseline.sh  run_behavior_workbench_batch.py  run_behavior_workbench_single.py  run_discovery_multiseed.py  smooth_kalman_rts.py  smooth_kp_temporal.py  test_e2e.py  test_feature_backends.py  test_video_overlay.py  train.py  train_calms21_stgcn.py  (+4 more)
(+154 files in other folders)
